--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,5 @@ sabyltimetracker/media/
 # See issue https://github.com/pydanny/cookiecutter-django/issues/1321
 !/compose/local/
 
+
+sabyltimetracker_env/
