overseer building cardinality

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 DJANGO_READ_DOT_ENV_FILE=True
 DJANGO_SENTRY_DSN=https://8fd21fa3909e48a0a676e102832ff658:7e675464f0a94bdfa90e35075e504108@sentry.io/306567
-DATABASE_URL=psql://postgres:hola123@localhost:5432/timetracking
+DATABASE_URL=psql://postgres:mysecretpassword@localhost:5432/timetrackingdb
 DJANGO_SETTINGS_MODULE=config.settings.local
 DJANGO_SECRET_KEY=txkwu25%s5nab&#0g+)4+)sot(27chf0o42%cl3mkm8iqzuv+d
 DJANGO_ALLOWED_HOSTS=localhost
+DJANGO_DEBUG = True
