--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,3 @@
-argon2-cffi==18.1.0
-awesome-slugify==1.6.5
-boto3==1.5.22
-botocore==1.8.50
-certifi==2018.8.24
-cffi==1.11.5
-chardet==3.0.4
-convertapi==1.1.0
-defusedxml==0.5.0
-Django==1.11.9
-django-allauth==0.34.0
-django-appconf==1.0.2
-django-compressor==2.2
-django-constance==2.3.1
-django-crispy-forms==1.7.0
-django-debug-toolbar==1.9.1
-django-environ==0.4.4
-django-extensions==2.1.2
-django-model-utils==3.1.1
-django-picklefield==1.1.0
-django-redis==4.8.0
-djangorestframework==3.7.7
-docutils==0.14
-gevent==1.2.2
-greenlet==0.4.14
-gunicorn==19.7.1
-idna==2.7
-jmespath==0.9.3
-oauthlib==2.1.0
-Pillow==5.0.0
-psycopg2==2.7.3.2
-pycparser==2.18
-python-dateutil==2.7.3
-python3-openid==3.1.0
-pytz==2017.3
-raven==6.5.0
-rcssmin==1.0.6
-redis==2.10.6
-regex==2018.8.29
-requests==2.19.1
-requests-oauthlib==1.0.0
-rjsmin==1.0.12
-s3transfer==0.1.13
-six==1.11.0
-sqlparse==0.2.4
-Unidecode==0.4.21
-urllib3==1.23
-whitenoise==3.3.1
-XlsxWriter==1.1.1
+# This file is here because many Platforms as a Service look for
+#	requirements.txt in the root directory of a project.
+-r requirements/production.txt
